# HullProject

./: .gitignore  CMakeLists.txt  main.cpp
include/: Hull.h
python_solution/: divide_conquer.py  o_notation_data.txt  show_performance.py
src/: Hull.cpp
